--- a/src/Distracey.Examples.ServiceDepthTwo/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.ServiceDepthTwo/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="body">
-    <h2>Distracey.Examples.Website</h2>
+    <h2>Distracey.Examples.ServiceDepthTwo</h2>
 
     View the headers sent and received.
 </div>
