Make example sites work Had to drop to async keyword usage

--- a/src/Distracey.Examples.Website/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.Website/Views/Home/Index.cshtml
@@ -2,4 +2,11 @@
     <h2>Distracey.Examples.Website</h2>
 
     View the headers sent and received.
+    
+    <ul>
+        <li><a href="/api/DepthZero/GetDepthZero/1">/api/DepthZero/GetDepthZero/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthOne/1">/api/DepthZero/GetDepthOne/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthTwo/1">/api/DepthZero/GetDepthTwo/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthThree/1">/api/DepthZero/GetDepthThree/1</a></li>
+    </ul>
 </div>
