Use Request directly and not through Response.Request as it will be null if there is an exception in the mvc action.

--- a/src/Distracey.Examples.Website/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.Website/Views/Home/Index.cshtml
@@ -9,4 +9,11 @@
         <li><a href="/api/DepthZero/GetDepthTwo/1">/api/DepthZero/GetDepthTwo/1</a></li>
         <li><a href="/api/DepthZero/GetDepthThree/1">/api/DepthZero/GetDepthThree/1</a></li>
     </ul>
+    
+    <ul>
+        <li><a href="/api/DepthZero/GetDepthZeroException/1">/api/DepthZero/GetDepthZeroException/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthOneException/1">/api/DepthZero/GetDepthOneException/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthTwoException/1">/api/DepthZero/GetDepthTwoException/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthThreeException/1">/api/DepthZero/GetDepthThreeException/1</a></li>
+    </ul>
 </div>
