--- a/src/Distracey.Examples.ServiceDepthOne/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.ServiceDepthOne/Views/Home/Index.cshtml
@@ -2,4 +2,6 @@
     <h2>Distracey.Examples.ServiceDepthOne</h2>
 
     View the headers sent and received.
+
+    <p><a href="/swagger">See api documentation</a></p>
 </div>
