--- a/src/Distracey.Examples.Website/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.Website/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     <h2>Distracey.Examples.Website</h2>
 
     View the headers sent and received.
-    
+
+    <p><a href="/swagger">See api documentation</a></p>
+
     <ul>
         <li><a href="/api/DepthZero/GetDepthZero/1">/api/DepthZero/GetDepthZero/1</a></li>
         <li><a href="/api/DepthZero/GetDepthOne/1">/api/DepthZero/GetDepthOne/1</a></li>
