Add parallel request examples

--- a/src/Distracey.Examples.Website/Views/Home/Index.cshtml
+++ b/src/Distracey.Examples.Website/Views/Home/Index.cshtml
@@ -11,6 +11,13 @@
         <li><a href="/api/DepthZero/GetDepthTwo/1">/api/DepthZero/GetDepthTwo/1</a></li>
         <li><a href="/api/DepthZero/GetDepthThree/1">/api/DepthZero/GetDepthThree/1</a></li>
     </ul>
+    
+    <ul>
+        <li><a href="/api/DepthZero/GetDepthZeroParallel/1">/api/DepthZero/GetDepthZeroParallel/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthOneParallel/1">/api/DepthZero/GetDepthOneParallel/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthTwoParallel/1">/api/DepthZero/GetDepthTwoParallel/1</a></li>
+        <li><a href="/api/DepthZero/GetDepthThreeParallel/1">/api/DepthZero/GetDepthThreeParallel/1</a></li>
+    </ul>
 
     <ul>
         <li><a href="/api/DepthZero/GetDepthZeroException/1">/api/DepthZero/GetDepthZeroException/1</a></li>
